deployment-cm-secret-mount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-simple-app
  labels:
    app: python-simple-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-simple-app
  template:
    metadata:
      labels:
        app: python-simple-app
    spec:
      containers:
        - name: python-simple-app
          image: prasadkasthuri/python-web-app:a1
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: app-config-volume
              mountPath: /config
              readOnly: true

            - name: app-secret-volume
              mountPath: /secret
              readOnly: true
      volumes:
        - name: app-config-volume
          configMap:
            name: python-simple-app-config
        - name: app-secret-volume
          secret:
            secretName: python-simple-app-secret
