service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-simple-app-clusterip
spec:
  type: ClusterIP
  selector:
    app: python-simple-app
  ports:
    - port: 8000
      targetPort: 8000
