service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-simple-app-lb
spec:
  selector:
    app: python-simple-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
