service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-simple-app-nodeport
spec:
  type: NodePort
  selector:
    app: python-simple-app
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30007
